# paint

./: .gitignore  CMakeLists.txt  paint.sln
paint/: button.h  main.cpp  paint.vcxproj  paint.vcxproj.filters  stroke.h  utility.h
src/: main.cpp  stroke.h
